# BigInt

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  bigint.h
.github/workflows/: CI-CD.yml
examples/: CMakeLists.txt  factorial.cpp  fibonacci.cpp  pascal_triangle.cpp
tests/: CMakeLists.txt  test.cpp
